Some minor improvements to CKEDitor LaTeX import handling

--- a/public/lesswrong-editor/sample/index.html
+++ b/public/lesswrong-editor/sample/index.html
@@ -22,6 +22,7 @@
 	<figure class="image"><img src="../tests/manual/sample.jpg" alt="Autumn fields"></figure>
 	<p>ab</p>
 	<p><span class="math-tex">\(\frac{31}{312}\)</span></p>
+	<script type="math/tex"> ws_* </script>
 	<p>You can use this sample to validate whether your <a
 			href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a>
 		works fine.</p>
